--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "sass": "^1.46.0",
-    "swiper": "^7.4.1"
+    "swiper": "^8.0.5"
+  },
+  "devDependencies": {
+    "sass": "^1.49.7"
   }
 }
